--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - main
-      - develop  # Se ejecutará en las ramas main y develop
+      - develop
   pull_request:
     branches:
       - main
-      - develop  # Se ejecutará en pull requests hacia las ramas main y develop
+      - develop
     types: [opened, synchronize, reopened]
 
 jobs:
@@ -18,13 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Clonación completa para una mejor relevancia del análisis
+          fetch-depth: 0
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'  # Asegúrate de usar Java 21
-          distribution: 'zulu'  # O considera usar otra distribución como 'temurin'
+          java-version: '21'
+          distribution: 'zulu'
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
@@ -42,8 +42,8 @@ jobs:
 
       - name: Build and analyze with SonarCloud
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Necesario para obtener información del PR
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Token de SonarCloud
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ElserManuel_AS222S5_T05_be
 
       # Docker steps to be executed only on develop branch
@@ -55,9 +55,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        if: github.ref == 'refs/heads/develop'  # Solo ejecutar en la rama develop
+        if: github.ref == 'refs/heads/develop'
         uses: docker/build-push-action@v5
         with:
           context: .  # Usar el contexto actual del repositorio
           push: true  # Push automático a Docker Hub
-          tags: elsermanuel/elsermanueldocker:latest  # Nombre de la imagen en Docker Hub
+          tags: elsermanuel/elsermanueldocker:latest
