--- a/pom.xml
+++ b/pom.xml
@@ -99,18 +99,18 @@
                 </configuration>
             </plugin>
             
-            <!-- Excluir pruebas innecesarias
+            <!-- Excluir pruebas innecesarias -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
                     <excludes>
-                        Excluir la prueba que falla 
+                        <!-- Excluir la prueba que falla -->
                         <exclude>**/SpringApigroqApplicationTests.java</exclude>
                     </excludes>
                 </configuration>
-            </plugin> -->
+            </plugin>
         </plugins>
     </build>
 </project>
