--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: SonarCloud + Docker Image
+
 on:
   push:
     branches:
@@ -16,16 +17,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # Step 2: Set up JDK 21
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'zulu'
 
+      # Step 3: Cache SonarCloud packages
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
         with:
@@ -33,6 +37,7 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
+      # Step 4: Cache Maven packages
       - name: Cache Maven packages
         uses: actions/cache@v4
         with:
@@ -40,13 +45,14 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      # Step 5: Build and analyze with SonarCloud
       - name: Build and analyze with SonarCloud
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=ElserManuel_AS222S5_T05_be
 
-      # Docker steps to be executed only on develop branch
+      # Step 6: Docker - Log in to Docker Hub (only on develop branch)
       - name: Log in to Docker Hub
         if: github.ref == 'refs/heads/develop'
         uses: docker/login-action@v2
@@ -54,6 +60,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Step 7: Docker - Build and push Docker image (only on develop branch)
       - name: Build and push Docker image
         if: github.ref == 'refs/heads/develop'
         uses: docker/build-push-action@v5
@@ -62,13 +69,14 @@ jobs:
           push: true  # Push automatically to Docker Hub
           tags: elsermanuel/elsermanueldocker:latest
 
-      # Setting environment variables for Spring
+      # Step 8: Set environment variables for Spring
       - name: Set environment variables
         run: |
           echo "URL_CLOUD=${{ secrets.URL_CLOUD }}" >> $GITHUB_ENV
           echo "URL_END=${{ secrets.URL_END }}" >> $GITHUB_ENV
           echo "URL_MONGO=${{ secrets.URL_MONGO }}" >> $GITHUB_ENV
 
+      # Step 9: Run Spring with the specified configuration
       - name: Run Spring with the specified configuration
         run: |
           java -jar target/your-app.jar --groqcloud.api.key=${{ env.URL_CLOUD }} --groqcloud.api.endpoint=${{ env.URL_END }} --spring.data.mongodb.uri=${{ env.URL_MONGO }}
