que dios quiera

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,9 @@ name: SonarCloud + Docker Image
 on:
   push:
     branches:
-      - main
       - develop
   pull_request:
     branches:
-      - main
       - develop
     types: [opened, synchronize, reopened]
 
@@ -71,4 +69,7 @@ jobs:
 
       - name: Run Spring with the specified configuration
         run: |
-          java -jar target/SpringAPIGROQ-0.0.1-SNAPSHOT.jar --groqcloud.api.key=${{ env.URL_CLOUD }} --groqcloud.api.endpoint=${{ env.URL_END }} --spring.data.mongodb.uri=${{ env.URL_MONGO }}
+          java -jar target/SpringAPIGROQ-0.0.1-SNAPSHOT.jar \
+            --groqcloud.api.key=${{ env.URL_CLOUD }} \
+            --groqcloud.api.endpoint=${{ env.URL_END }} \
+            --spring.data.mongodb.uri=${{ env.URL_MONGO }}
