--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <!-- Sonar properties -->
         <sonar.organization>elsermanuel</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <lombok.version>1.18.28</lombok.version>
     </properties>
     
     <dependencies>
@@ -49,6 +50,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
 
@@ -79,6 +81,7 @@
 
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -89,6 +92,7 @@
                 </configuration>
             </plugin>
             
+            <!-- Spring Boot Maven Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
